tests/init_state/cfg_shape/move_in_one_branch_read_at_merge.err.expected
error: at 14:5: [INIT-UseInconsistent] In function 'f', block 'merge': variable 'x' may be used before initialization or after move (state inconsistent across paths)
    |
 14 |     call use_num(copy x);
    |     ^^^^^^^^^^^^^^^^^^^^
